// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCollapsibleNavToggle is rendered 1`] = `
<span
  class="euiCollapsibleNavToggle"
/>
`;

exports[`EuiCollapsibleNavToggle is rendered when navIsDocked is true 1`] = `
<span
  class="euiCollapsibleNavToggle euiCollapsibleNavToggle--navIsDocked"
/>
`;
